# genAI-book-sample

./: README.md  renovate.json
.github/: labeler.yml
.github/workflows/: label-chapters.yml
docs/chapter5/: 5.5-hybrid-search.md
scripts/chapter2/: .env.example  .gitignore  2-1-1-tiktoken.py  2-1-1-token-comparison.py  2-1-1.py  2-1-2-out.txt  2-6-3-out.txt  README.md  add_model.py  call-llm.py  fix_models.py  pyproject.toml  run-all.py  setup.sh  test.sh  update_chapter2.py
scripts/chapter2/prompts/: 2-6-3-prompt.txt
scripts/chapter3/: 3-3-1_advanced_role_example.py  3-3-1_generate_text.py  3-3-2_response_format.py  3-3-2_temperature.py  3-3-2_top_p.py  3-3-3_response.py  3-4-1_translate_text.py  3-4-2_batch_translate.py  3-4-2_contextual_translate.py  3-4-2_evaluate_translation.py  3-4-2_max_tokens.py  3-5-2_contextual_translate.py  3-5-2_evaluate_translation.py  3-5-4_retry_on_error.py  3-6-1_streaming_chat.py  3-6-2_conditional_branch_template.py  3-6-2_prompt_template.py  3-6-3_controlled_chat.py  3-6-3_cost_monitor.py  3-6-4_retry_on_error.py  3-7-3_controlled_chat.py  3-7-3_cost_monitor.py  pyproject.toml
scripts/chapter4/: 4-3-2_prompt_template.py  4-3-2_prompt_template_multiple.py  4-3-3_str_output_parser.py  4-3-4_chain_multiple.py  4-3-5_memory.py  4-4-1_chatbot_basic.py  4-4-2_chatbot_faq.py  4-5-2_prompt_template.py  4-5-2_prompt_template_multiple.py  4-5-3_json_output_parser.py  4-5-3_pydantic_output_parser.py  4-5-3_str_output_parser.py  4-5-4_chain.py  4-5-4_chain_multiple.py  4-5-6_tool.py  4-6-1_chatbot_basic.py  4-6-2_chatbot_faq.py  4-8-1_add_conditional_edges.ipynb  4-8-2_fan_out_fan_in_and_loop.ipynb  4-8-3_human_in_the_loop.ipynb  README.md  pyproject.toml
scripts/chapter5/: 5-2-2-simple-hybrid-search.py  5-3-1-search-comparison.py  5-3-3-simple-hybrid-search.py  5-4-1-hybrid-search-rrf.py  5-5-1-complete-rag-pipeline.py  5-5-1-hybrid-search-rrf.py  5-6-2-complete-rag-pipeline.py  README.md  hybrid_rrf.py  pyproject.toml
scripts/chapter5/results/: 5-1-1_with_rag.txt  5-1-1_without_rag.txt  5-2-1_keyword_search.txt  5-2-1_summary.txt  5-2-1_vector_search.txt  5-2-2_hybrid_search.txt  5-4-1-ensemble-results.txt  5-4-1-hybrid-search-comparison.txt  5-4-1-weight-comparison.txt
scripts/chapter6/: pyproject.toml
scripts/chapter6/src/: run_app.py
scripts/chapter7/: 7-3-1_stop_verification.py  7-3_react_search.py  7-4_langgraph_search.py  7-5_rag_agent.py  7-5_research_agent.py.old  7-6_rag_agent.py  README.md  pyproject.toml
