[project]
name = "chapter4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==1.0.7",
    "langchain-openai==1.0.3",
    "langchain-community==0.4.1",
    "langgraph==1.0.3",
    "python-dotenv==1.2.1",
    "jupyterlab==4.4.10",
]
