[project]
name = "chapter5-rag"
version = "0.1.0"
description = "第5章 RAG実装のサンプルコード"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "tiktoken>=0.5.0",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
only-include = [
    "*.py",
    "*.md",
    "*.txt"
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # 行の長さは100文字まで許可